多页入口的webpack打包已完成初版

--- a/multipe/src/app/offline/index.html
+++ b/multipe/src/app/offline/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>offline</title>
 </head>
 <body>
-    
+    <h2>页面已下线</h2>
 </body>
 </html>
