--- a/multipe/src/app/index/index.html
+++ b/multipe/src/app/index/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>homepage</title>
 </head>
 <body>
-    <div class="logo"></div>
+    <div class="content">
+        <div class="title"></div>
+    </div>
 </body>
 </html>
